VulnerableAppRestController.java changed;